fixed dark mode

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,10 @@
+.mainCard {
+  width: 100%;
+  height: 62.5%;
+  top: 37.5%;
+  position: absolute;
+}
+
 .logoContainer {
   bottom: 62.5%;
   position: absolute;
