--- a/src/components/InfoCards/styles.module.css
+++ b/src/components/InfoCards/styles.module.css
@@ -2,9 +2,6 @@
   border-radius: 16px !important;
   padding: 16px;
   margin: 16px 16px 0 16px;
-  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1) !important;
-  box-shadow: 0 3px 5px -1px rgb(0 0 0 / 20%), 0 6px 10px 0 rgb(0 0 0 / 14%),
-    0 1px 18px 0 rgb(0 0 0 / 12%) !important;
 }
 
 .header {
@@ -14,6 +11,13 @@
   text-align: center;
 }
 
-.header p {
-  color: rgba(0, 0, 0, 0.87);
+p.bodyText {
+  font-size: 0.8em;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smooth: antialiased;
+  text-rendering: optimizeLegibility;
+  text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
+  color: gray;
 }
