--- a/src/components/StopInfoCard/styles.module.css
+++ b/src/components/StopInfoCard/styles.module.css
@@ -29,3 +29,14 @@
 .icon {
   margin-right: 12px;
 }
+
+p.bodyText {
+  font-size: 0.8em;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-smooth: antialiased;
+  text-rendering: optimizeLegibility;
+  text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
+  color: gray;
+}
