--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,6 @@ code {
   text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
 }
 
-p {
-  font-size: 0.8em;
-  width: 100%;
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  font-smooth: antialiased;
-  text-rendering: optimizeLegibility;
-  text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
-  color: gray;
+.MuiCard-root {
+  background-image: none !important;
 }
